--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -67,7 +67,7 @@
 										<th>Titre</th>
 										<th>Artiste</th>
 										<th>Genre</th>
-										<th>Durée</th>
+										<th>Année</th>
 										<th class="last-th">Actions</th>
 									</tr>
 									<tbody>
@@ -83,7 +83,7 @@
 											
 											<th><% if !song.private || correct_user? %><%= "#{song.artist}" %><% end %></th>
 											<th><% if !song.private || correct_user? %><%= "#{song.genre}" %><% end %></th>
-											<th></th>
+											<th><%= song.year %></th>
 
 											<th class="th-action">
 												<a data-toggle="modal" data-target="#exampleModalLong" class="action-zik"><%= image_tag('playlist.png') %></a>
@@ -188,95 +188,4 @@
 			</div>
 		</div>
 	</div>
-<script type="text/javascript">
-$(document).ready(function(){
-		if(localStorage.getItem('hide') === 'true'){
-	    	menuToggle();
-		}
-
-		$('.menu-profil').click(function(){
-	    	localStorage.setItem('hide', true);
-	    	menuToggle();
-		});
-
-		var contentTable = $('.active-list').attr('data-content');
-
-		$('.nav-profil li').click(function(){
-			$('.nav-profil li').removeClass('active-list');
-			var contentTable = $(this).attr('data-content');
-			$('.table').hide();
-
-			$(this).addClass('active-list');
-			$('.'+contentTable).css('display','inline-table');
-		});
-
-		$(document).on('click','.play-music', function(){
-	  	$('.th-music img').attr('src','/assets/play-button.png');
-
-			$(this).attr('src','/assets/pause-button.png');
-			$(this).parent().parent().addClass('active-music').siblings().removeClass('active-music');
-			$(this).removeClass('play-music').addClass('pause-music');
-			var audio_src = $(this).attr('data-music');
-			$('audio').each(function(){ 
-				if($(this).attr('src') !== audio_src){
-					$(this).attr('src', audio_src);
-				}	
-				this.player.getCurrentTime();
-	     	this.player.play();
-	  	});
-		});
-
-		//play option 2
-		$(document).on('click', '.mejs__play button', function(){
-			$('.active-music .pause-music').attr('src','/assets/pause-button.png');
-		});
-
-		$(document).on('click', '.mejs__pause button', function(){
-			$('.active-music .pause-music').attr('src','/assets/play-button.png');
-		});
-		
-		//pause button
-		$(document).on('click','.pause-music', function(){
-	  	$('.th-music img').attr('src','/assets/play-button.png');
-	  	
-			$(this).attr('src','/assets/play-button.png');
-			$(this).removeClass('pause-music').addClass('play-music');
-			var audio_src = $(this).attr('data-music');
-			$('audio').each(function(){ 
-	      this.player.pause();
-	  	});
-		});
-
-		$('.content-page').perfectScrollbar(); 
-		$('.profil-side').perfectScrollbar(); 
-		$('.sidebar').perfectScrollbar();
-		$('.bloc-bottom').perfectScrollbar();
-
-		
-		$(document).on('click', '.parcourir-sidebar', function(){
-			$('.my-profil-sidebar').css('display','none');
-			$('.list-all-profil').css('display','block');
-
-			$('.parcourir-sidebar').addClass('active-li-sidebar');
-			$('.profil-sidebar').removeClass('active-li-sidebar');
-		});
-
-		$(document).on('click', '.profil-sidebar', function(){
-			$('.my-profil-sidebar').css('display','block');
-			$('.list-all-profil').css('display','none');
-			$('.bloc-bottom').scrollTop(0);
-			$('.bloc-bottom').perfectScrollbar('update');
-
-			$('.parcourir-sidebar').removeClass('active-li-sidebar');
-			$('.profil-sidebar').addClass('active-li-sidebar');
-		});
-
-});
-		function menuToggle(){
-			$('.profil-side').toggle();
-			$('.content-page').toggleClass('clicked');
-			$('.nav-profil').toggleClass('clicked');
-			$('.close-img').toggleClass('clicked');
-			$('.show-img').toggleClass('clicked');
-		}
-</script>
+<%= render partial: "shared/script" %>
