--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -86,6 +86,11 @@
 											<th class="th-action">
 												<a data-song="<%= song.id %>" data-toggle="modal" data-target="#exampleModalLong" class="action-zik"><%= image_tag('playlist.png') %></a>
 												<a href="<%= song.file.url %>" class="action-zik" download><%= image_tag('download-arrow.png') %></a>
+												<% if FavoriteSong.exists?(user_id: current_user, song_id: song.id)%>
+												<%= link_to image_tag('like_red.png'), '#', class: "action-zik favorite", data: {:song => song.id} %>
+												<% else %>
+												<%= link_to image_tag('like.png'), '#', class: "action-zik favorite", data: {:song => song.id} %>
+												<% end %>
 												<%= link_to image_tag('new-file.png'), edit_song_path(song) ,class: "action-zik" %>
 												<%= link_to image_tag('delete-button.png'), song, class: "action-zik", method: :delete, data: { confirm: 'Êtes-vous sûr de vouloir supprimer cette musique ?' } %>
 											</th>
@@ -299,6 +304,24 @@ $('#add_song').submit(function(e){
             <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
             <strong>${data}</strong>
           </div>`));
+    });
+  });
+
+$('a.favorite').click(function(e){
+    e.preventDefault();
+    var song_id = $(this).data('song');
+    var that = this;
+    $.get(`/songs/favorite/${song_id}`, function(data){
+      $('html').prepend($(
+          `<div class="alert alert-info alert-dismissable">
+            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+            <strong>${data}</strong>
+          </div>`));
+		var img = $(that).children().first();
+		if(img.attr('src').indexOf('red') !== -1)
+			img.attr('src', '/assets/like.png');
+		else
+			img.attr('src', '/assets/like_red.png');
     });
   });
 </script>
