song show & index pages

--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,53 +1,186 @@
-<h1>Songs</h1>
+<div class="container container-global">
+    <!-- Sidebar -->
+    <div class="row">
+      <%= render partial: "shared/sidebar" %>
 
-<%= form_tag('/songs', method: 'get') do %>
-  <%= label_tag(:query, 'Title or artist:') %>
-  <%= search_field_tag(:query, params[:query] || '', list: 'datas') %>
-  <datalist id="datas">
-    <% Song.pluck(:artist, :title).flatten.uniq.each do |d| %>
-      <option value="<%= d %>">
-    <% end %>
-  </datalist>
-  <br/>
-  <%= select_tag(:genre, options_for_select(["Genre"] + Song.all.pluck(:genre).uniq, params[:genre]))%>
-  <br/>
-  <%= submit_tag('search') %>
-<% end %>
+      <div class="page-content">
+        <div class="head">
+          <div class="audio">
+            <% if @songs.size > 0 %>
+              <audio id="mejs" src="<%= @songs.first.file.url %>" class="mejs__player"></audio>
+            <% end %>
+          </div>
+          <h1 class="title-head"><%= correct_user? ? "PROFIL" : "PROFIL DE #{current_user.username}" %></h1>
+          <div class="avatar">
+            <figure style="background-image: url(<%= gravatar_src(current_user) %>); background-size: cover;">
+              
+            </figure>
+            <span><%= link_to current_user.username, user_path(current_user) %></span>
+          </div>
+          <%= render partial: 'shared/song_search' %>
+        
+        </div>
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+               <h4 class="modal-title" id="exampleModalLongTitle">Ajouter à une playlist</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <p>Choisissez une playlist:</p>
+                <%= form_tag("/add_song", method: "post", id: "add_song") do %>
+                  <%= select_tag(:playlist_id, options_for_select(current_user.playlists.collect{|p| [p.name, p.id]}))%>
+                  <button type="submit">AJOUTER</button>
+                <% end %>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">ANNULER</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container-fluid">
+          <!-- <%= image_tag('zikror.png', class: "bg-content") %> -->
+          <div class="row">
+            <ul class="nav-profil">
+              <span>Recherche pour : </span><%= params[:query] %>
+              <div class="menu-profil">
+                <%= image_tag('menu-show.png', class: "show-img", style:"display:none;") %>
+                <%= image_tag('multiply.png', class: "close-img") %>
+              </div>
+            </ul>
+            <div class="col-lg-9 col-md-8 content-page">
+              <% unless @songs.empty? %>
+              <table class="table musique ctn-musique table-profil">
+                <thead>
+                  <tr class="disabled-tr">
+                    <th>#</th>
+                    <th class="action-music"></th>
+                    <th>Titre</th>
+                    <th>Artiste</th>
+                    <th>Genre</th>
+                    <th>Année</th>
+                    <th class="last-th">Actions</th>
+                  </tr>
+                  <tbody>
+                    <% @songs.each_with_index do |song, key| %>
+    
+                    <tr>
+                      <th><%= key + 1 %></th>
+                      <th class="th-music">
+                        <%= image_tag('play-button.png', class: "play-music", :data => { :music => song.file.url, :index => key }) %>
+                      </th>
+                      
+                      <th><% if !song.private || correct_user? %><%= link_to "#{song.title}", song_path(song) %><% end %></th>
+                      
+                      <th><% if !song.private || correct_user? %><%= "#{song.artist}" %><% end %></th>
+                      <th><% if !song.private || correct_user? %><%= "#{song.genre}" %><% end %></th>
+                      <th><%= song.year %></th>
 
-<table>
-  <thead>
-    <tr>
-      <th>Owner</th>
-      <th>Title</th>
-      <th>Artist</th>
-      <th>Year</th>
-      <th>Genre</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+                      <th class="th-action">
+                        <a data-song="<%= song.id %>" data-toggle="modal" data-target="#exampleModalLong" class="action-zik"><%= image_tag('playlist.png') %></a>
+                        <a href="<%= song.file.url %>" class="action-zik" download><%= image_tag('download-arrow.png') %></a>
+                        <%= link_to image_tag('new-file.png'), edit_song_path(song) ,class: "action-zik" %>
+                        <%= link_to image_tag('delete-button.png'), song, class: "action-zik", method: :delete, data: { confirm: 'Êtes-vous sûr de vouloir supprimer cette musique ?' } %>
+                      </th>
+                    </tr>   
+                    <% end %>
+                  <!-- each -->
+                  </tbody>
+                </thead>
+              </table>
+              <% end %>
+            </div>
+            <div class="profil-side col-lg-3 col-md-4">
+            <%= form_tag(user_path(current_user), method: 'get', class: "form-search form-search-profil") do %>
+              <div class="form-group">
+                <%= search_field_tag(:username, params[:username] || '', name: 'username', placeholder: 'Recherche de profil') %>
+                <button type="submit"><%= image_tag('search.png') %></button>
+              </div>
+            <% end %>
+              <div class="center-vertical">
+                <ul class="parcourir-profil-sidebar">
+                  <li class="profil-sidebar active-li-sidebar"><span>MON PROFIL</span></li>
+                  <li class="parcourir-sidebar"><span>PARCOURIR</span></li>
+                </ul>
+                <div class="bloc-bottom">
+                  <ul class="list-all-profil" style="display:none;">
+                  <% User.where("username LIKE ?", "%#{params[:username]}%").each do |user| %>
+                    <div>
+                      <li><%= gravatar(user, 40) %></li>
+                      <li class="title-user"><%= link_to user.username, user %></li>
+                      <li><%= user.description %></li>
+                      <div class="action-sidebar-profil">
+                      <% if current_user == user %>
+                        <li><%= link_to 'Edit', edit_user_path(user) %></li>
+                      <% end %>
+                      <% if current_user.admin %>
+                        <li><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></li>
+                      <% end %>
+                      </div>
+                     </div>
+                  <% end %>
+                  </ul>
+                  <div class="my-profil-sidebar">
+                    <div class="avatar-profil" style="background: url(<%= gravatar_src(current_user) %>); background-size: cover">
+                    </div>
+                    <span class="username"><%= current_user.username %></span>
+                    <p class="description-profil"><%= current_user.description %></p>
+                    <div class="bloc-pop">
+                      <span tabindex="0" class="glyphicon glyphicon-option-horizontal" data-trigger="focus" data-toggle="popover" data-content="Email : <%= current_user.mail %>"></span>
+                      <div class="info-user-pop popover">
+                        <span>Email : <%= current_user.mail %></span>
+                        <span>Inscrit le : <%= current_user.created_at.strftime("%d-%m-%Y") %></span>
+                        <span>Musiques : <%= current_user.songs.size %></span>
+                      </div>
+                    </div>
+                    <div class="button">
+                      <%= link_to 'PARAMETRES', edit_user_path(current_user) %>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="deconnect-profil">
+                <%= image_tag('logout.png') %>
+                <span class="span-deconnect"><%= link_to "Deconnexion", logout_path, :method => "delete" %></span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-  <tbody>
-    <% @songs.each do |song| %>
-      <tr>
-        <td><%= link_to song.user.username, user_path(song.user) %></td>
-        <td><%= song.title %></td>
-        <td><%= song.artist %></td>
-        <td><%= song.year %></td>
-        <td><%= song.genre %></td>
-        <td><%= link_to 'Show', song %></td>
-        <% if current_user == song.user %>
-          <td><%= link_to 'Edit', edit_song_path(song) %></td>
-        <% end %>
-        <% if song.user == current_user || current_user.admin %>
-          <td><%= link_to 'Destroy', song, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= render partial: "shared/script" %>
 
-<%= will_paginate %>
+<script type="text/javascript">
 
-<br>
+var song_id;
 
-<%= link_to 'New Song', new_song_path %>
+$("a[data-song]").click(function(){
+  song_id = $(this).data('song');
+  $('#add_song input[type=submit]').prop('disabled', false)
+});
+
+$('#add_song').submit(function(e){
+    e.preventDefault();
+    $.post('/playlists/add_song',
+    {
+      song_id: song_id,
+      playlist_id: $('#playlist_id').val()
+    },
+      function(data){
+    $('.modal-backdrop.fade.in').hide();
+        $('#exampleModalLong').hide();
+        $('body').prepend($(
+          `<div class="alert alert-info alert-dismissable">
+            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+            <strong>${data}</strong>
+          </div>`));
+    });
+  });
+</script>
