--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,21 +25,20 @@
 				  <div class="modal-dialog" role="document">
 				    <div class="modal-content">
 				      <div class="modal-header">
-				        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+				       <h4 class="modal-title" id="exampleModalLongTitle">Ajouter à une playlist</h4>
 				        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 				          <span aria-hidden="true">&times;</span>
 				        </button>
 				      </div>
 				      <div class="modal-body">
-				        <p>Pick the playlist you want to add the song to:</p>
+				        <p>Choisissez une playlist:</p>
 				        <%= form_tag("/add_song", method: "post", id: "add_song") do %>
 				          <%= select_tag(:playlist_id, options_for_select(current_user.playlists.collect{|p| [p.name, p.id]}))%>
-				          <%= submit_tag("Add") %>
+				          <button type="submit">AJOUTER</button>
 				        <% end %>
 				      </div>
 				      <div class="modal-footer">
-				        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-				        <button type="button" class="btn btn-primary">Save changes</button>
+				        <button type="button" class="btn btn-secondary" data-dismiss="modal">ANNULER</button>
 				      </div>
 				    </div>
 				  </div>
@@ -60,7 +59,8 @@
 							<table class="table musique ctn-musique table-profil">
 								<thead>
 									<tr class="disabled-tr">
-										<th>#</th>
+										<th class="index-th">#</th>
+										<th class="favoris-th"></th>
 										<th class="action-music"></th>
 										<th>Titre</th>
 										<th>Artiste</th>
@@ -70,31 +70,36 @@
 									</tr>
 									<tbody>
 										<% @user.songs.each_with_index do |song, key| %>
-		
+
+										<% if !song.private || song.user == current_user %>
 										<tr>
 											<th><%= key + 1 %></th>
+											<th><% if FavoriteSong.exists?(user_id: current_user, song_id: song.id)%>
+												<%= link_to image_tag('like_red.png'), '#', class: "action-zik favorite", data: {:song => song.id} %>
+												<% else %>
+												<%= link_to image_tag('like.png'), '#', class: "action-zik favorite", data: {:song => song.id} %>
+												<% end %></th>
 											<th class="th-music">
 												<%= image_tag('play-button.png', class: "play-music", :data => { :music => song.file.url, :index => key }) %>
 											</th>
 											
-											<th><% if !song.private || correct_user? %><%= link_to "#{song.title}", song_path(song) %><% end %></th>
+											<th><%= link_to "#{song.title}", song_path(song) %></th>
 											
-											<th><% if !song.private || correct_user? %><%= "#{song.artist}" %><% end %></th>
-											<th><% if !song.private || correct_user? %><%= "#{song.genre}" %><% end %></th>
+											<th><%= "#{song.artist}" %></th>
+											<th><%= "#{song.genre}" %></th>
 											<th><%= song.year %></th>
 
 											<th class="th-action">
 												<a data-song="<%= song.id %>" data-toggle="modal" data-target="#exampleModalLong" class="action-zik"><%= image_tag('playlist.png') %></a>
 												<a href="<%= song.file.url %>" class="action-zik" download><%= image_tag('download-arrow.png') %></a>
-												<% if FavoriteSong.exists?(user_id: current_user, song_id: song.id)%>
-												<%= link_to image_tag('like_red.png'), '#', class: "action-zik favorite", data: {:song => song.id} %>
-												<% else %>
-												<%= link_to image_tag('like.png'), '#', class: "action-zik favorite", data: {:song => song.id} %>
-												<% end %>
+												
 												<%= link_to image_tag('new-file.png'), edit_song_path(song) ,class: "action-zik" %>
+												<% if song.user == current_user %>
 												<%= link_to image_tag('delete-button.png'), song, class: "action-zik", method: :delete, data: { confirm: 'Êtes-vous sûr de vouloir supprimer cette musique ?' } %>
+												<% end %>
 											</th>
-										</tr>		
+										</tr>	
+										<% end %>	
 										<% end %>
 									<!-- each -->
 									</tbody>
@@ -169,17 +174,18 @@
 										<p class="description-profil"><%= @user.description %></p>
 										<div class="bloc-pop">
 											<span tabindex="0" class="glyphicon glyphicon-option-horizontal" data-trigger="focus" data-toggle="popover" data-content="Email : <%= @user.mail %>"></span>
-											<div class="info-user-pop popover">
-												<span>Email : <%= @user.mail %></span>
-												<span>Inscrit le : <%= @user.created_at.strftime("%d-%m-%Y") %></span>
-												<span>Musiques : <%= @user.songs.size %></span>
-											</div>
+											
 										</div>
 										<div class="button">
 											<%= link_to 'PARAMETRES', edit_user_path(current_user) %>
 										</div>
 									</div>
 								</div>
+							</div>
+							<div class="info-user-pop popover">
+								<span><b>Email</b> : <%= @user.mail %></span>
+								<span><b>Inscrit le</b> : <%= @user.created_at.strftime("%d-%m-%Y") %></span>
+								<span><b>Musiques</b> : <%= @user.songs.size %></span>
 							</div>
 							<div class="deconnect-profil">
 								<%= image_tag('logout.png') %>
@@ -193,6 +199,7 @@
 	</div>
 
 <%= render partial: "shared/script" %>
+
 <script type="text/javascript">
 
 var song_id;
@@ -203,7 +210,6 @@ $("a[data-song]").click(function(){
 });
 
 $('#add_song').submit(function(e){
-		alert('ok')
     e.preventDefault();
     $.post('/playlists/add_song',
     {
@@ -221,6 +227,7 @@ $('#add_song').submit(function(e){
     });
   });
 
+
 $('a.favorite').click(function(e){
     e.preventDefault();
     var song_id = $(this).data('song');
@@ -233,5 +240,4 @@ $('a.favorite').click(function(e){
 			img.attr('src', '/assets/like_red.png');
     });
   });
-
 </script>
