--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:900" rel="stylesheet"> 
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
-
+    <%= favicon_link_tag('logo-zkr.png') %>
   </head>
 
   <body>
